--- a/app/views/shared/_fancybox.html.erb
+++ b/app/views/shared/_fancybox.html.erb
@@ -1,5 +1,5 @@
 <% content_for :javascripts do %>
-  <%= javascript_include_tag "fancybox" %>
+  <%= javascript_include_tag "fancybox", :type => "text/javascript" %>
 <% end %>
 <% content_for :stylesheets do %>
   <%= stylesheet_link_tag "fancybox" %>
